--- a/ClosetInventory/Views/Shared/_Layout.cshtml
+++ b/ClosetInventory/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Upload Item", "Upload", "Home")</li>
+                    <li>@Html.ActionLink("UserHomePage", "UserHomePage", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
