--- a/ClosetInventory/Views/Skirts/Edit.cshtml
+++ b/ClosetInventory/Views/Skirts/Edit.cshtml
@@ -91,7 +91,9 @@
                 </div>
             </div>
         </div>
-        @Html.HiddenFor(model => model.LargeFile)@Html.HiddenFor(model => model.SmallFile)
+        @Html.HiddenFor(model => model.LargeFile)
+        @Html.HiddenFor(model => model.SmallFile)
+        @Html.HiddenFor(model => model.UserId)
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
