--- a/ClosetInventory/Views/Home/UserHomePage.cshtml
+++ b/ClosetInventory/Views/Home/UserHomePage.cshtml
@@ -5,48 +5,15 @@
 }
 
 
-@Html.Partial("_PartialDresses", Model) 
-
-
-<h2>UserHomePage</h2>
-<script src="/Scripts/jquery-1.10.2.js"></script>
-
-<div id="outfitCover">
-    @if (Model.Outfit.Cover != null)
-    {
-        <img id="cover" src="@Model.Outfit.Cover.SmallFile" />
-    }
-</div>
-<div id="outfitShirt">
-    @if (Model.Outfit.Shirt != null)
-    {
-        <img id="shirt" src="@Model.Outfit.Shirt.SmallFile" />
-    }
-</div>
-<div id="outfitPants">
-    @if (Model.Outfit.Pants != null)
-    {
-        <img id="pants" src="@Model.Outfit.Pants.SmallFile" />
-    }
-</div>
-<div id="outfitShoe">
-    @if (Model.Outfit.Shoe != null)
-    {
-        <img id="shoes" src="@Model.Outfit.Shoe.SmallFile" />
-    }
-</div>
-
-
-
 @using (Html.BeginForm())
 {
 
     <div class="form-horizontal">
         <h4>Outfit</h4>
         <hr />
-    
+
         <div class="form-group">
-           @Html.HiddenFor(model => Model.Outfit)
+        
         </div>
 
 
@@ -58,83 +25,42 @@
         </div>
     </div>
 }
-
-<button type="button" id="covers">Covers</button>
-<button type="button" id="pants">Pants</button>
-<button type="button" id="shoes">Shoes</button>
-<button type="button" id="skirts">Skirts</button>
-<button type="button" id="shirts">Shirts</button>
-<button type="button" id="dresses">Dresses</button>
-
-<div id="inventory"></div>
+@Html.Partial("_PartialUserHomePage", Model)
+<form action="" method="post" id="postTo">
 
 
+</form>
+<button type="button" onclick="RenderPage('Dresses')">Dresses</button>
+<button type="button" onclick="RenderPage('Pants')">Pants</button>
+<button type="button" onclick="RenderPage('Skirts')">Skirts</button>
+<button type="button" onclick="RenderPage('Shirts')">Shirts</button>
+<button type="button" onclick="RenderPage('Shoes')">Shoes</button>
+<button type="button" onclick="RenderPage('Covers')">Covers</button>
+<script type="text/javascript">
 
-<script>
- 
-
-    $('#covers').click(function () {
-        RenderPartial("Covers");
-    });
-    $('#pants').click(function () {
-        RenderPartial("Pants");
-    });
-    $('#shoes').click(function () {
-        RenderPartial("Shoes");
-    });
-    $('#skirts').click(function () {
-        RenderPartial("Skirts");
-    });
-    $('#shirts').click(function () {
-        RenderPartial("Shirts");
-    });
-    $('#dresses').click(function () {
-        RenderPartial("Dresses");
-    });
-
-    function RenderPartial(Item) {
-        $('#inventory').replaceWith('Html.Partial("_Partial{0}", Model.{1})'
-            .replace("{0}", Item)
-            .replace("{1}", Item));
+ function RenderPage(item) {
+     var path = "Home" + item;
+     var model = @Html.Raw(Json.Encode(Model));
+     $.ajax({
+    url: '/home/' + path,
+    type: 'POST',
+    data: {model,
+    contentType: 'application/json; charset=utf-8',
+    success: function (data) {
+        alert(data.success);
+    },
+    error: function () {
+        alert("error");
     }
-    function MoveCoverToOutfit(smallFile) {
+});
+        //$('#postTo').attr("action", path);
+        //$('#postTo').submit();
 
-        $('#outfitCover')
-            .replaceWith('<div id="outfitCover"><img id="cover" src="#" /></div>'
-            .replace("#", smallFile));
     }
-    function MoveShirtToOutfit(smallFile) {
-
-        $('#outfitShirt')
-            .replaceWith('<div id="outfitShirt"><img id="shirt" src="#" /></div>'
-            .replace("#", smallFile));
-    }
-    function MovePantsToOutfit(smallFile) {
-
-        $('#outfitPants')
-            .replaceWith('<div id="outfitPants"><img id="pants" src="#" /></div>'
-            .replace("#", smallFile));
-    }
-    function MoveShoeToOutfit(smallFile) {
-
-        $('#outfitShoe')
-            .replaceWith('<div id="outfitShoe"><img id="shoe" src="#" /></div>'
-            .replace("#", smallFile));
-    }
-    function MoveDressToOutfit(smallFile) {
-
-        $('#outfitPants')
-            .replaceWith('<div id="outfitPants"><img id="dress" src="#" /></div>'
-            .replace("#", smallFile));
-
-        $('#outfitShirt')
-            .replaceWith('');
+    function WearOutfit() {
+        var path = "~/Outfits/Create";
+        $('#postTo').attr("action", path)
     }
 
 </script>
 
-
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
