--- a/ClosetInventory/Views/Home/HomeSkirts.cshtml
+++ b/ClosetInventory/Views/Home/HomeSkirts.cshtml
@@ -35,19 +35,42 @@
 
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", "Skirts", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", "Skirts", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", "Skirts", new { id = item.Id })
+                @Html.ActionLink("Edit", "Edit", "Skirts", new { id = item.Id }, null) |
+                @Html.ActionLink("Details", "Details", "Skirts", new { id = item.Id }, null) |
+                @Html.ActionLink("Delete", "Delete", "Skirts", new { id = item.Id }, null)
             </td>
         </tr>
     </table>
 }
-<script>
- function MoveSkirtToOutfit(smallFile) {
+<form action="" method="post" id="postTo">
+    @Html.HiddenFor(model => model.Outfit.Id)
+    @Html.HiddenFor(model => model.Outfit.UserId)
+
+    <div id="itemType"></div>
+</form>
+<script type="text/javascript">
+    function MoveDressToOutfit(smallFile) {
 
         $('#outfitPants')
-            .replaceWith('<div id="outfitPants"><img id="skirt" src="#" /></div>'
+            .replaceWith('<div id="outfitPants"><img id="dress" src="#" /></div>'
             .replace("#", smallFile));
-    }
-</script>
 
+        $('#outfitShirt')
+            .replaceWith('');
+    }
+
+
+
+    function RenderPage(item) {
+        var path = "Home" + item;
+        $('#postTo').attr("action", path);
+        $('#postTo').submit();
+
+    }
+    function WearOutfit() {
+        var path = "~/Outfits/Create";
+        $('#postTo').attr("action", path)
+    }
+
+
+</script>
