--- a/ClosetInventory/Views/Home/SetImageType.cshtml
+++ b/ClosetInventory/Views/Home/SetImageType.cshtml
@@ -11,7 +11,7 @@
  
     @Html.HiddenFor(model => model.LargeFile)
     @Html.HiddenFor(model => model.SmallFile)
-
+    @Html.HiddenFor(model => model.Color)
 
     
 
